--- a/vue.html
+++ b/vue.html
@@ -8,3 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Introducción a VUEjs</title>
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    </head>
+
+    <body>
+
+        <h1>Hola coño en VUEjs</h1>
+        
