--- a/vue.html
+++ b/vue.html
@@ -15,4 +15,10 @@
     <body>
 
         <h1>Hola coño en VUEjs</h1>
-        
+        <div id="main"></div>
+
+        <script src="app.js"></script>
+
+    </body>
+
+    </html>
